# xdsl-bench

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  TODO.md  asv.conf.json  pyproject.toml
.asv/results/: benchmarks.json
.asv/results/github-action/: 03fb744d-virtualenv-py3.12.json  03fb744d-virtualenv-py3.13.json  05458db9-virtualenv-py3.12.json  061f484c-virtualenv-py3.12.json  0d01d470-virtualenv-py3.12.json  0d39a26e-virtualenv-py3.12.json  0e1cec0f-virtualenv-py3.12.json  10221499-virtualenv-py3.12.json  10508afc-virtualenv-py3.12.json  14578f19-virtualenv-py3.12.json  19545426-virtualenv-py3.12.json  19abdc83-virtualenv-py3.12.json  1bcad916-virtualenv-py3.12.json  1f67b7dd-virtualenv-py3.12.json  20290ae0-virtualenv-py3.12.json  2338bb00-virtualenv-py3.12.json  237c6053-virtualenv-py3.12.json  242db623-virtualenv-py3.12.json  258be65a-virtualenv-py3.12.json  29266f49-virtualenv-py3.12.json  293b7474-virtualenv-py3.12.json  298bbbab-virtualenv-py3.12.json  2a389562-virtualenv-py3.12.json  2aac6cee-virtualenv-py3.12.json  2cbf5fd9-virtualenv-py3.12.json  2ce4059d-virtualenv-py3.12.json  2d39e738-virtualenv-py3.12.json  2e51f5e9-virtualenv-py3.12.json  2e891ac2-virtualenv-py3.12.json  32c095cc-virtualenv-py3.12.json  32ecd268-virtualenv-py3.12.json  346e1d4d-virtualenv-py3.12.json  34e1697b-virtualenv-py3.12.json  3553a77b-virtualenv-py3.12.json  355c6041-virtualenv-py3.12.json  35d5b6b2-virtualenv-py3.12.json  3725f40f-virtualenv-py3.12.json  3c3b445a-virtualenv-py3.12.json  3e6e8838-virtualenv-py3.12.json  40aaea23-virtualenv-py3.12.json  (+108 more)
.github/workflows/: asv-dev.yaml  asv.yaml
benchmarks/: __init__.py  bench_lexer.py  end_to_end.py  example.py  import_classes.py  import_xdsl_opt.py  lexer.py  load_dialects.py  parser.py  printer.py  rewriter.py  rewriting.py
benchmarks/resources/: get_test_mlir.py
benchmarks/resources/extra_mlir/: large_dense_attr_hex.mlir  program_20.mlir
benchmarks_dev/: example.py
results/fv-az1247-932/: machine.json
src/xdsl_bench/: __init__.py  utils.py
